# llm-cli

./: .gitignore  CMakeLists.txt  EngineProcess.txt  README.md  toolchain-windows.cmake
data/: character_modal.cbor  character_modal.json
src/: chat.cpp  chat.hpp  main.cpp  train.cpp  train.hpp
